--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <link
       rel="shortcut icon"
-      href="./src/assets/images/globe.svg"
-      type="image/svg"
+      href="./src/assets/images/favIcon.png"
+      type="image/png"
     />
     <title>Aldemir Souza - Redes Sociais</title>
   </head>
